infra/k8s/e5-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e5-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e5-database
  template:
    metadata:
      labels:
        app: e5-database
    spec:
      containers:
        - name: e5-database
          image: christopherbauer/5tools/5e-database
---
apiVersion: v1
kind: Service
metadata:
  name: e5-database-mongo-srv
spec:
  selector:
    app: e5-database-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
