infra/k8s/rolls-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roll-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roll
  template:
    metadata:
      labels:
        app: roll
    spec:
      containers:
        - name: roll
          image: christopherbauer/5tools/rolls

---
apiVersion: v1
kind: Service
metadata:
  name: roll-srv
spec:
  selector:
    app: roll
  ports:
    - name: roll
      protocol: TCP
      port: 3000
      targetPort: 3000
