infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  rules:
    - host: 5tools.dev
      http:
        paths:
          - path: /api/roll/?(.*)
            backend:
              serviceName: roll-srv
              servicePort: 3000
    - host: 5tools.dev
      http:
        paths:
          - path: /api/encounter/?(.*)
            backend:
              serviceName: encounter-srv
              servicePort: 3001
